[package]
name = "can_unpack"
version = "0.1.0"
edition = "2024"
authors = ["Millan Kumar <millankumar@gmail.com>"]
description = "Unpack / decode / parse CAN frames into Signals"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/LelsersLasers/can_unpack"
homepage = "https://github.com/LelsersLasers/can_unpack"
keywords = ["CAN", "parse", "decode", "unpack", "dbc"]

[dependencies]
